--- a/hpc-a3/hpc-a3.vcxproj
+++ b/hpc-a3/hpc-a3.vcxproj
@@ -94,6 +94,8 @@
     <CudaCompile Include="kernel.cu" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\bench_das5.sh" />
+    <None Include="..\main.job" />
     <None Include="..\makefile" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
